alignment fixes for community section

--- a/src/pages/communities/style.less
+++ b/src/pages/communities/style.less
@@ -9,7 +9,7 @@
     margin: auto;
     max-width: 1100px;
     width: 100%;
-    text-align: center;
+    text-align: left;
 
     a {
       color: @black;
@@ -18,7 +18,7 @@
 
     .community {
       display: inline-block;
-      margin: 10px;
+      margin: 2em;
       height: 100px;
       position: relative;
       text-align: left;
